--- a/src/webapp/WEB-INF/pages/Car.html
+++ b/src/webapp/WEB-INF/pages/Car.html
@@ -5,21 +5,63 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Cars</h1>
+<div>
+    <h1>Cars</h1>
 
-<table border="1" cellpadding="5">
-    <tr>
-        <th>Model</th>
-        <th>Speed</th>
-        <th>Year</th>
-    </tr>
+    <table>
+        <tr>
+            <th>Model</th>
+            <th>Speed</th>
+            <th>Year</th>
+        </tr>
 
-    <tr th:each="car : ${cars}">
-        <td th:utext="${car.model}">model</td>
-        <td th:utext="${car.speed}">speed</td>
-        <td th:utext="${car.year}">year</td>
-    </tr>
+        <tr th:each="car : ${cars}">
+            <td th:utext="${car.model}">model</td>
+            <td th:utext="${car.speed}">speed</td>
+            <td th:utext="${car.year}">year</td>
+        </tr>
 
-</table>
+    </table>
+
+        <style>
+            h1 {
+                text-align: center;
+            }
+
+            table {
+                font-size: 14px;
+                border-collapse: collapse;
+                text-align: center;
+                align-self: center;
+                margin: auto;
+            }
+
+            th, td:first-child {
+                background: #AFCDE7;
+                color: white;
+                padding: 10px 20px;
+            }
+
+            th, td {
+                border-style: solid;
+                border-width: 0 1px 1px 0;
+                border-color: white;
+                width: 150px;
+            }
+
+            td {
+                background: #D8E6F3;
+            }
+
+            th:first-child, td:first-child {
+                text-align: left;
+                width: 50px;
+            }
+
+
+        </style>
+
+
+    </div>
 </body>
 </html>
